feat: get all deliveries video links route works
